# supply-chain-env

./: .env.example  .gitignore  ACTION_REFERENCE.md  BASELINE_RESULTS.md  Dockerfile  EVAL.md  GRADER_SPEC.md  README.md  WALKTHROUGH.md  baseline_benchmarks.py  docker-compose.yml  inference.py  inference_results.txt  openenv.yaml  pyproject.toml  requirements-rl.txt  requirements.txt  rl_smoke.py  robustness_checks.py  runner_groq.py  test_inference.py  validate-submission.sh
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/data/: __init__.py  disruptions.json  orders.json  suppliers.json
backend/app/environment/: __init__.py  disruptions.py  engine.py  suppliers.py
backend/app/graders/: __init__.py  base.py  grader.py
backend/app/models/: __init__.py  action.py  observation.py  reward.py  state.py
backend/app/rl/: __init__.py  action_catalog.py  encoding.py  gym_wrapper.py
backend/app/simulation/: __init__.py  constraints.py  market_dynamics.py  risk_engine.py  supply_network.py  world_state.py
backend/app/tasks/: __init__.py  base.py  task_adversarial.py  task_adversarial_v2.py  task_easy.py  task_expert.py  task_foundational.py  task_full_sim.py  task_hard.py  task_medium.py  task_multi_tier.py  task_stochastic.py
backend/tests/: test_api.py  test_environment.py  test_graders.py  test_inference_helpers.py  test_rl_foundation.py
frontend/: index.html  styles.css
server/: __init__.py  app.py
