[project]
name = "supply-chain-env"
version = "1.0.0"
description = "Supply Chain Disruption Management OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core==0.1.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
