[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-env"
version = "3.0.0"
description = "God-Level Supply Chain Disruption Management Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "openenv-core==0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "server*"]
